# qcware-unitair

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: braket.sty  conf.py  first_example.rst  index.rst  install.rst  quantum_states.rst
docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  install.rst.txt
docs/api/: apply_operators.rst  gates.rst  initializations.rst  states.rst
docs/tutorial/: first_example.rst  quantum_states.rst
src/unitair/: __init__.py  _device_utils.py  initializations.py  utils.py
src/unitair/gates/: gate_construction.py  gates.py  matrix_algebra.py
src/unitair/simulation/: __init__.py  measurement.py  operations.py  utils.py
src/unitair/states/: __init__.py  conversions.py  innerprod.py  shapes.py
tests/: hypothesis_strategies.py  test_hilbertspace.py  test_initializations.py  test_operations.py  test_state_shapes.py  test_states.py  test_unitary.py  test_utils.py
tests/hypothesis_strategies/: __init__.py  specialized.py  tensors.py
unitair/: __init__.py  _device_utils.py  gates.py  initializations.py  utils.py
unitair/gates/: __init__.py  gate_constrcution.py  gates.py
unitair/simulation/: __init__.py  measurement.py  operations.py  utils.py
unitair/states/: __init__.py  conversions.py  innerprod.py  shapes.py
