[metadata]
name = unitair
version = 0.1.3
author = QC Ware Corp. (Sean Weinberg, Fabio Sanches)
author_email = sean.weinberg@qcware.com
description = PyTorch-based quantum computing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qcware/qcware-unitair.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.8.1
    decorator>=4.4.2
    numpy>=1.21.0
    setuptools>=53.0.0

[options.extras_require]
test =
    hypothesis>=6.14.0
    pytest

[options.packages.find]
where = src
